# pdf-builder

./: .env  .gitignore  app.py  pyproject.toml
secrets/: domain.cert  private.key  public.key
src/: __init__.py
src/public/css/: main.css
src/public/js/: image.js
src/routes/: .env  api.py
src/routes/secrets/: domain.cert  private.key  public.key
src/templates/: base.twig  image.twig  index.twig  pdf_print.twig
